--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <div id="hero">
         <div class="container">
-        <h2>Encuentra nueva tecnologia en un solo lugar</h2>
+        <h2>Tu Tienda Tecnológica</h2>
         <p>Todos los productos con Envio Gratis</p>
         </div>
     </div>
