--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <div class="card">
                 <img src="/img/3.jpg" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>Xiaomi Redmi Note 11</h4>
+                    <p>Xiaomi</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$340</p>
@@ -112,8 +112,8 @@
             <div class="card">
                 <img src="/img/4.jpg" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>Nokia 6.1 Plus (Nokia X6)</h4>
+                    <p>Nokia</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$600</p>
@@ -127,8 +127,8 @@
             <div class="card">
                 <img src="/img/5.png" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>HP Computadora All in One / 21-b0002la</h4>
+                    <p>Intel® Celeron®</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$750</p>
@@ -142,8 +142,8 @@
             <div class="card">
                 <img src="img/6.jpg" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>Laptop HP Integrada: Gráficos AMD Radeon™ D Ryzen™ 3 4300U 15-EF1031LA</h4>
+                    <p>Intel® Celeron®</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$550</p>
@@ -157,8 +157,8 @@
             <div class="card">
                 <img src="img/7.jpg" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>Computadora de escritorio DELL Optiplex 7010 de formato pequeño</h4>
+                    <p>Amazon renewed</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$600</p>
@@ -172,8 +172,8 @@
             <div class="card">
                 <img src="img/8.jpg" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>ASUS Laptop Gaming ROG Ryzen 9-5900HS GeForce RTX 3050Ti</h4>
+                    <p>Asus</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$200</p>
@@ -187,8 +187,8 @@
             <div class="card">
                 <img src="img/9.jpg" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>Auriculares para juegos G2000 para PS5 PS4 PC Xbox One</h4>
+                    <p>VersionTech</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$200</p>
@@ -202,8 +202,8 @@
             <div class="card">
                 <img src="img/10.webp" class="imagen-curso u-full-width">
                 <div class="info-card">
-                    <h4>Curso de Comida Vegetariana</h4>
-                    <p>Juan Pedro</p>
+                    <h4>Auriculares con cancelación de ruido inalámbricos Sony WH-1000XM5</h4>
+                    <p>Sony</p>
                     <img src="/img/png-transparent-star-customer-service-review-rating-star-text-logo-computer-wallpaper.png">
                     <div class="texto-precio">
                         <p class="precio">$200</p>
